--- a/App01/BlazorApp1/Pages/FizzBuzz.razor
+++ b/App01/BlazorApp1/Pages/FizzBuzz.razor
@@ -3,22 +3,11 @@
 
 <h1>Fizz Buzz</h1>
 
-<ul>
-        @foreach (string porco in OsTresPorquinhos())
-        {
-            <li> @porco </li>
-        }
-    </ul>
-
 <input placeholder="Fizz" @bind="@Fizz" />
 
 <input placeholder="Buzz" @bind="@Buzz" />
 
 @TableGenerator()
-
-
-
-
 
 @code {
     private RenderFragment TableGenerator()
@@ -34,19 +23,24 @@
                 foreach (int num in row)
                 {
                     var value = (string)null;
-                    if (Fizz != 0 && Buzz != 0)
-                    {
 
+                    if (Fizz != 0)
+                    {
                         if (num % Fizz == 0)
                         {
                             value = "Fizz";
                         }
+                    }
+
+                    if (Buzz != 0)
+                    {
                         if (num % Buzz == 0)
                         {
                             value += "Buzz";
 
                         }
                     }
+
                     value = (value == null) ? num.ToString() : value;
 
                     t.OpenElement(3, "td");
@@ -63,36 +57,32 @@
     public int Fizz;
     public int Buzz;
 
-    public int[] oneHundred = Enumerable.Range(1, 100).ToArray();
-
     public List<int[]> rowsDivided()
     {
         var rowItemIndex = 0;
         var maxItensPerRow = 9;
-        List<int[]>
-            rowDivided = new List<int[]>
-                ();
-        List<int>
-            rowItems = new List<int>
-                ();
+
+        var oneHundred = Enumerable.Range(1, 100).ToArray();
+
+        List<int[]> rowDivided = new List<int[]>();
+        List<int> rowItems = new List<int>();
+
+
         foreach (int num in oneHundred)
         {
+            rowItems.Add(num);
+            rowItemIndex++;
+
             if (rowItemIndex > maxItensPerRow)
             {
                 rowItemIndex = 0;
                 rowDivided.Add(rowItems.ToArray());
                 rowItems.Clear();
 
-            }
-            rowItems.Add(num);
-            rowItemIndex++;
+            }            
         }
-        return rowDivided;
-    }
 
-    public string[] OsTresPorquinhos()
-    {
-        return new string[] { "Porco 01", "Porco 02", "Robson" };
+        return rowDivided;
     }
 }
 
