--- a/App01/BlazorApp1/wwwroot/css/site.css
+++ b/App01/BlazorApp1/wwwroot/css/site.css
@@ -1,11 +1,33 @@
 @import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
 
 html, body {
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-family: 'Fire Coda', Helvetica, Arial, sans-serif;
+    color: #fff;
 }
 
 a, .btn-link {
     color: #0366d6;
+}
+
+table {
+    margin-top:30px;
+    margin-bottom:30px;
+    flex-direction:column;
+    border-collapse: collapse;
+    border-radius: 5px;
+}
+    
+table, tr, td{
+    border: 1px solid rgb(80, 80, 80);
+    align-content:center;
+    height: 30px;
+    width: 30px; 
+}
+
+td{
+    color:rgb(255, 255, 255);
+    font-family:'Fira Code Retina';
+    font-weight:bold;
 }
 
 .btn-primary {
@@ -31,8 +53,8 @@ app {
 }
 
 .main .top-row {
-    background-color: #f7f7f7;
-    border-bottom: 1px solid #d6d5d5;
+    background-color: rgb(70, 70, 70);
+    border-bottom: 1px solid rgb(58, 57, 57);
     justify-content: flex-end;
 }
 
@@ -41,7 +63,8 @@ app {
 }
 
 .sidebar {
-    background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
+    background-image:  rgb(71, 71, 71);
+    margin-right:  rgb(0, 0, 0);
 }
 
 .sidebar .top-row {
@@ -73,7 +96,7 @@ app {
 }
 
 .nav-item a {
-    color: #d7d7d7;
+    color: rgb(255, 255, 255);
     border-radius: 4px;
     height: 3rem;
     display: flex;
@@ -82,12 +105,12 @@ app {
 }
 
 .nav-item a.active {
-    background-color: rgba(255,255,255,0.25);
-    color: white;
+    background-color: rgba(72, 9, 122, 0.25);
+    color: rgb(255, 255, 255);
 }
 
 .nav-item a:hover {
-    background-color: rgba(255,255,255,0.1);
+    background-color: rgba(0, 0, 0, 0.1);
     color: white;
 }
 
